--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,12 @@
-title: Your awesome title
-author: GitHub User
+title: My first Blog 0.0
+author: Jack12
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-
+  I'm trying build a blog with help of github. **Issue** me if u have any advice 0.0
 # social links
 twitter_username: your-twitter-handle
 github_username:  your-github-handle
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-cayman
+theme: minima
