--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My first Blog 0.0
+title: Jackal learns to blog
 author: Jack12
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
